# Shell-Eco-Marathon-2025

./: ._requirements.txt  .gitignore  .gitmodules  engage_button.py  requirements.txt
DEBUG/2025_04_09_15_58_05/logs/: log_0.txt  log_1.txt  log_10.txt  log_11.txt  log_12.txt  log_13.txt  log_14.txt  log_15.txt  log_16.txt  log_17.txt  log_18.txt  log_19.txt  log_2.txt  log_20.txt  log_21.txt  log_22.txt  log_23.txt  log_24.txt  log_25.txt  log_26.txt  log_27.txt  log_28.txt  log_29.txt  log_3.txt  log_30.txt  log_31.txt  log_4.txt  log_5.txt  log_6.txt  log_7.txt  log_8.txt  log_9.txt
calibration_setup/: both_images.py  left_image_zed.py  left_video_zed.py  path_calibration.py
src/ad_juno/: package.xml  setup.cfg  setup.py
src/ad_juno/ad_juno/: .can_node_resurrections.py.swp  button_engage_node.py  can_node_resurrections.py  path_planning.py  path_planning_plus1.py  path_planning_plus2.py  path_planning_plus3.py  seg_node.py  steering_brake_node.py  steering_node.py  steering_node_relative.py  stop_node.py  test.py  throttle_node.py  throttle_node_v2.py  webcam_test.py  zed_node.py  zed_publisher.py
src/ad_juno/launch/: enable_check.py  steer_test.py  stop_test.py  test_bench.py
src/ad_juno/resource/: ._ad_juno
src/ad_juno/scripts/: autostart.sh  launch_selector.sh  setup_autostart.sh  setup_can  setup_can.sh
src/juno_bringup/: CMakeLists.txt  package.xml
src/juno_bringup/launch/: button_engage.launch.py  competition.launch.py  enable_check.launch.py  obstacle_avoidance.launch.py  path_planning.launch.py  path_planning_plus1.launch.py  path_planning_plus2.launch.py  path_planning_plus3.launch.py  path_planning_relative.launch.py  path_planning_test_video.launch.py  steer_test.launch.py  stitching_node.py  stop_test.launch.py  test_bench.launch.py
src/shared_objects/: CMakeLists.txt  package.xml  setup.py
src/shared_objects/resource/: ._shared_objects
src/shared_objects/src/shared_objects/: Motor.py  Motor_old.py  Motor_relative.py  ROS_utils.py  utils_path.py
src/test_files/: Playground_motor.py  brake_tester.py  tensorrt_test.py  test_can_ECU.py  test_can_motore.py  test_enable.py  test_motor.py  test_one_motor.py  test_two_motors.py  v8_custom.py
