<?xml version="1.0"?>
<package format="2">
  <name>ad_juno</name>
  <version>0.0.0</version>
  <description>The AUG-juno package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alemomo@todo.todo">alemomo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/AUG-juno</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <depend>roscpp</depend> -->
  <!--   <depend>roscpp</depend> -->
  <!-- Use depend for packages you need at compile time: -->
  <!--   <depend>message_generation</depend> -->
  <!-- Use depend for packages you need in order to build against this package: -->
  <!--   <depend>message_generation</depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use depend for packages you need at runtime: -->
  <!--   <depend>message_runtime</depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <depend>std_msgs</depend>
  <depend>Motor</depend>
  <depend>move_base</depend>
  <depend>pyzed</depend>
  <depend>rclpy</depend>
  <depend>my_odom_configuration_dep</depend>
  <depend>my_sensor_configuration_dep</depend>
  <depend>my_tf_configuration_dep</depend>
  <!--depend>shared_objects</depend-->
  <depend>HybridNets</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <build_type>ament_python</build_type>
</export>
</package>
